# goit-pyweb-hw-02

./: Dockerfile  app.py  main_task1.py  pyproject.toml
